# ChangeLog for media-fonts/lklug
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-fonts/lklug/ChangeLog,v 1.8 2013/02/05 07:33:28 zerochaos Exp $

  05 Feb 2013; Rick Farina <zerochaos@gentoo.org> lklug-0.6.ebuild:
  adding ~arm

  08 Aug 2012; Johannes Huber <johu@gentoo.org> lklug-0.6.ebuild:
  Stable for x86, wrt bug #419061

  03 Aug 2012; Markos Chandras <hwoarang@gentoo.org> lklug-0.6.ebuild:
  Stable on amd64 wrt bug #419061

  15 Apr 2012; Mike Frysinger <vapier@gentoo.org> lklug-0.6.ebuild:
  Add ia64 love #349020 by Dennis Schridde.

*lklug-0.6 (08 Mar 2012)

  08 Mar 2012; Tomáš Chvátal <scarabeus@gentoo.org> +lklug-0.6.ebuild:
  Version bump to the latest.

  19 Feb 2012; Agostino Sarubbo <ago@gentoo.org> lklug-0.5.4.ebuild:
  Stable for AMD64, wrt bug #404095

  18 Feb 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> lklug-0.5.4.ebuild:
  x86 stable wrt bug #404095

*lklug-0.5.4 (28 Aug 2011)

  28 Aug 2011; MATSUU Takuto <matsuu@gentoo.org> +lklug-0.5.4.ebuild,
  +metadata.xml:
  Intial import. The ebuild is submitted by Oschtan and Nikoli, bug #270972.