@@ -1,26 +1,28 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
 DIST ttf-sinhala-lklug-0.5.4.tar.gz 380991 SHA256 f4a8308503d256bf92faec7132eb245c52faa62b3197da1a709312a18a9290e9
 DIST ttf-sinhala-lklug-0.6.tar.gz 382873 SHA256 1a3da886686b6c24aae6cdaf882739afcf129d1062232b5c4565a8ba4456f81c SHA512 d1b1459981f1d80acd17aa09a2171e17ad246d98e00035c9592a6c93d89423ccb20f440c3eaccb21b9bb5fae2ac8eca5458715fe8a60e7294f75f9fffe3417aa WHIRLPOOL 7b5a769749919995e984a4e5e827a7b3b4a14c134f2ccf655df2fdef18764f3fed400c7e8d8604ab01ab5e9a6600b841923b0041ad6ca2d62d18c855c8519966
 EBUILD lklug-0.5.4.ebuild 528 SHA256 3b76cc2d59138226e24cb9915cec9ba4c869dcbf77f933aa32e33b2ba8002fa6 SHA512 6d8b96e02ae6dc95839c5a9fab503a91888bd252bc2871b57d4cd9942d51d9da2e3e3d718448f15f8dfba87aba05a4932659dc7d4569bb054f4ee4a1479c3f75 WHIRLPOOL f1ec6c51a34a02096e9a6dd35b4159fa8e17811bd4fb0a81ed7bd1c050da77b9968b35c9854ff7eb11cf3568506e3d685b117babb957f80f0f3753b87ab0ceba
-EBUILD lklug-0.6.ebuild 543 SHA256 d9b9345069fc4a52251bb9ac7cd9dd3e134edd98940f3441aff80fbeeef603d0 SHA512 7b44a2084a98ee3c53051a14836cf393a2bda453b91b9451d977281d2eedaf7e02e881b13a6f1a15798076f8fa0c423a96a4a1498c82abc8f81618893e98912d WHIRLPOOL dfb5d11ec50aca8a8e7e6a64dc192737c06f31f9806730621fbbe707a9f59a2cc4f136f9ab820bce09a8ac54d8e3edf4d0697b3fa5795105d95dbb330eb61f39
-MISC ChangeLog 1147 SHA256 cbc78c8851bb40c6da88c61fc9aa4a1168d706692dfd26a50805469fa91d74c4 SHA512 88ed86f0e8063364f4c900351ef79ec849b40bcf135a4a011cb2f422a1db3b9368e11bb0391c8db4267b7621ccab5a7952359d05b51023e084781e663b6aa5f1 WHIRLPOOL fbac34e077cd27a320dd9c8ae9b603063291ddae63fd4affb4e095aaea425a6ac1f606133e75747344af48e689592858380888b9dd788f9b714e08b00a2fded1
+EBUILD lklug-0.6.ebuild 544 SHA256 9621bbfbdae8299f32d1830545ce5478b23755d1680851aeb8f14d6871e80a07 SHA512 ad260dfa7631f2f2a2a386c708c7d06e95130ad027ba8ef08eff5cbfdeef32c786234b6d6cef473a7593b957b99909b39ed6cad0b9d57bac7fc1982642e37e60 WHIRLPOOL c51df128a4220af0ae8aa3878df6d76be211601ec22d93c4b75e4dac21a7ac30a9dd7d4040fe633d2b8b13510a8cb206d1c1209f68ba809196ca6b79cad2ac0d
+MISC ChangeLog 1228 SHA256 ca695b2227add843ba9bd9ac8cd59b3d0750409283bca4fd1025a0aa56581942 SHA512 e2dc53c2f9c460bfb3a4f77a52ca42ee8fc1dbc28471c6f01d7c8fcd383846c1c376dca8895e4e3bea02c5a7799776d7591cc4051297bb72aa11a604d517a8be WHIRLPOOL 9aae2ea705e42e0fe70ec109252d410f1e84927337a19569a2df0cd17a365086cccea8c70833cdfcabd3f921bc04a19f729891194f7c8efd19326aecc4fd1e10
 MISC metadata.xml 159 SHA256 ad008d96fe36a7e9201b1d92332022bec87b557c8a36ea05a72ddf3b729102b1 SHA512 f1c12d8fa0c8a200513f3ffa0d2fc96bc45b95387cfd3a74fe4cbc43cd452e72801c166ea4d21cf628bde7f12dbfe8467dae9f29d5eff4c27933ef10955e7130 WHIRLPOOL 8282dbdfc2398db155bfa64489a481a9fee04ce09713020107116fd7793f7f34f62ac1965d921d5e21438b2ec4c1e1f1aa7a1f6189d13de8ccac873cb4007480
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0
 
-iQIcBAEBCgAGBQJRELXKAAoJEKXdFCfdEflKqZAP/3ij6k17XJUnvP0T5qm/tGSN
-Yr3Iq9JR9whYUQ5l/cT3O/DxW+DsKLIhabBnVXtXQbuDiHehkY9/nEqDoKxJEmc+
-NqsrHjzIYsiiSSyuwEeVYheWhQO19P4zQQrkC/LG672zQlByo/X22RPDLcYgCiUd
-6b0vzvqXU51F7uYA66/ZPtkx336Jy4DbJz05aGey9FuenuZXI2LpnZdmP/o96BNx
-aMAGveXZh3L8E01ooVfolYVNBh2NGq9vdAKaTtWUSJ3LWuGFUp9RjJqd8Qh2hl1e
-c0GjP//lfjpf6qM1II69m/4Fa7DeqvXk14grjF430tQ6c1jHaF0whguzrX8zVoVj
-6f+PzoAo5g2i8fNgMFHBwxXaynqBxX5ZSwp1sZuEQfwT5d4upsL+v46UDLlpkGA6
-3QMNE28W+fmFJ4YCbQS4NfH9nH5WwCkk0TwLLIz24PglI8cX4D5i7DeuM/eOgcm8
-SHQdr4REmOfqk610TP7JvoqF3RF4zSXbPp9Al6VmwoDdvArhwhI/Abs/NkiKPxYR
-XdBlbKCJwuYRMwrVVg0naTj0H3HI1gk0ScTzSOOsk+Bxn8AJkhbvFRCznSjAKbRd
-+1gQd7PKtFoHFmQGVcxNSTQJ2TqWEU0x8BxYCbrsHiG9Rgdk8fzivOV5NwxnA3DR
-GJlOo720MHyksSrhtDvo
-=oeoX
+iQJ8BAEBCABmBQJVXZvPXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ1MjhERTZCRDg2OTFBNDM5MUZEQTJFRDQy
+MUM2MzIxMjlDNkQ3REU0AAoJECHGMhKcbX3kcrUQAI8LmAKthPVAMq7n6XBe5m4A
+71OiyyJ6IlIrXQVtJA8tftZh6IKtyhEpDPDdvNkjwlyAGVqwfvS+u9SxnYgPsJJV
+QN8iK3TMoy2ePmrBqHkG1MfFwMDbCz8FB9WEr9ddyopV+zFS7RPVepGN2v4kRCZl
+ffME/GDoiDqawntYKN5djKSXjQ01JBMHGop1I/AlAhCR0nTbx8n6kfzp/6srZ+eo
+GD9j55KVgEICWtEO5jJosYFCwp4PNZNXwvRpvLT7s1PuxYXRcTH65b8vmVpK9tAy
+UIdtv8WpXv6SwxC2BVrUaQphgRsqYxFfY92/8ffc45FO2I3ugv+p3XMhFY1C5GEE
+RBSfyNm2Yslbq3g4MOTA0ZLdhdBdry4M1eSG8QFQx9FG/7LdWRn99ROd8To2jqEl
+Nl4DRjASWOR8azedkLnr1BIQN3Ce7mTD9ELVUtLz197dgwIVpNTLghhwHemCi62q
+V2M/RvonRdc9bkWH5Y9h9zH6TW6zw7kLla9XzFjUmHtlSf52kBBSPyn/1ftUSkBq
+3FnIyG+i/Be0QMp3v8ZBtIBe3XSorttnld4umGPkjpyDknjBq4zgGIEi3Bo4alJi
+Wc54E6I8Wd5N0HpxbItTJ8DRZYFDH66igOE/jAW7W/D2Bw87Y05ZkUVyR7/XPra6
+w+cDx1PrhYbAEbZu4qFj
+=36R+
 -----END PGP SIGNATURE-----
