@@ -1,6 +1,6 @@
-# Copyright 1999-2013 Gentoo Foundation
+# Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-fonts/lklug/lklug-0.6.ebuild,v 1.5 2013/02/05 07:33:28 zerochaos Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-fonts/lklug/lklug-0.6.ebuild,v 1.6 2015/05/21 08:47:46 chewi Exp $
 
 EAPI="4"
 
@@ -13,7 +13,7 @@ SRC_URI="http://sinhala.sourceforge.net/files/${MY_P}.tar.gz"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="amd64 ~arm ~ia64 x86"
+KEYWORDS="amd64 ~arm ~ia64 ~ppc x86"
 IUSE=""
 
 S="${WORKDIR}/${MY_P}"
