@@ -1,6 +1,9 @@
 # ChangeLog for media-fonts/lklug
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-fonts/lklug/ChangeLog,v 1.8 2013/02/05 07:33:28 zerochaos Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-fonts/lklug/ChangeLog,v 1.9 2015/05/21 08:47:46 chewi Exp $
+
+  21 May 2015; James Le Cuirot <chewi@gentoo.org> lklug-0.6.ebuild:
+  ~ppc keyword.
 
   05 Feb 2013; Rick Farina <zerochaos@gentoo.org> lklug-0.6.ebuild:
   adding ~arm
